[package]
name = "creator"
version = "0.1.0"
edition = "2021"
description = "Generate configuration files for Texmate's AOI system"
authors = ["Alan Beveridge <adgbeveridge@proton.me>"]

[dependencies]
iced = "0.10"
native-dialog = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
